<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaEstudiante">

    <TextView
        android:id="@+id/txvAltaEstudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txvAlta"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtNombreAlta"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/edtNombreAlta"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAltaEstudiante" />

    <EditText
        android:id="@+id/edtApellidosAlta"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hintApellidosAlta"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreAlta" />

    <RadioGroup
        android:id="@+id/rdGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvGenero">

        <RadioButton
            android:id="@+id/rdMasculino"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/rdgeneroM" />

        <RadioButton
            android:id="@+id/rdFemenino"
            android:layout_width="127dp"
            android:layout_height="34dp"
            android:text="@string/rdgeneroF" />
    </RadioGroup>

    <TextView
        android:id="@+id/txvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txvGeneroTitulo"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidosAlta" />


    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnAceptarInsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnCambiarFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGenero" />


</androidx.constraintlayout.widget.ConstraintLayout>